Use single OpenIdConnect provider for auth

--- a/src/Website/Web.config
+++ b/src/Website/Web.config
@@ -6,14 +6,15 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="system.identityModel" type="System.IdentityModel.Configuration.SystemIdentityModelSection, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
-    <section name="system.identityModel.services" type="System.IdentityModel.Services.Configuration.SystemIdentityModelServicesSection, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Website-20150526114322.mdf;Initial Catalog=aspnet-Website-20150526114322;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\ProjectsV12;AttachDbFilename=|DataDirectory|\aspnet-Website-2.mdf;Initial Catalog=aspnet-Website-2;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--
+    <add name="DefaultConnection" connectionString="Server=tcp:gdo4e1dz1c.database.windows.net,1433;Database=mcosand-apps;User ID=stagingdb@gdo4e1dz1c;Password=hpRwIAMpSgWSPdNVPJ17;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+    -->
   </connectionStrings>
-  <appSettings>
+  <appSettings file="web.local.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -25,12 +26,6 @@
     <add key="databaseUrl" value="DATABASE_URL" />
     <add key="twilioAccountSid" value="TWILIO_ID" />
     <add key="memberLinkTemplate" value="DATABASE_URL/members/detail/{0}" />
-    <add key="O365:ClientId" value="MY_CLIENTID_GUID" />
-    <add key="O365:Authority" value="https://login.windows.net/MY_TENANT_NAME" />
-    <add key="Google:ClientId" value="MY_LONG_STRING.apps.googleusercontent.com"/>
-    <add key="Google:ClientSecret" value="MY_SECRET"/>
-    <add key="Facebook:AppId" value="MY_LONG_STRING"/>
-    <add key="Facebook:AppSecret" value="MY_SECRET"/>
     <add key="autoUpdateDatabase" value="true"/>
     -->
   </appSettings>
