--- a/src/Website/Web.config
+++ b/src/Website/Web.config
@@ -62,7 +62,9 @@
     <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
   <system.webServer>
-
+    <rewrite>
+	  <rules></rules>
+	</rewrite>
     <staticContent>
       <remove fileExtension=".woff2" />
       <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
