Token database API access

--- a/src/Website/Web.config
+++ b/src/Website/Web.config
@@ -21,12 +21,16 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="timezone" value="Pacific Standard Time" />
     <!--
-    <add key="databaseUsername" value="USERNAME" />
-    <add key="databasePassword" value="NOT_THE_PASSWORD" />
-    <add key="databaseUrl" value="DATABASE_URL" />
     <add key="twilioAccountSid" value="TWILIO_ID" />
     <add key="memberLinkTemplate" value="DATABASE_URL/members/detail/{0}" />
     <add key="autoUpdateDatabase" value="true"/>
+    <add key="auth:authority" value="https://localhost:44300" />
+    <add key="auth:endsession" value="https://localhost:44300/connect/endsession"/>
+    <add key="auth:redirect" value="https://localhost:44304" />
+    <add key="auth:clientId" value="CLIENT_ID_FOR_UI" />
+    <add key="api:client" value="CLIENT_ID_FOR_DATABASE_API"/>
+    <add key="api:clientSecret" value="CLIENT_SECRET"/>
+    <add key="api:root" value="DATABASE_API_ROOT" />
     -->
   </appSettings>
   <location path="Account">
@@ -96,7 +100,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
