--- a/src/Website/packages.config
+++ b/src/Website/packages.config
@@ -6,6 +6,7 @@
   <package id="bootstrap" version="3.3.5" targetFramework="net46" />
   <package id="bootstrap-select" version="1.7.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="IdentityModel" version="1.10.0" targetFramework="net46" />
   <package id="jQuery" version="2.1.4" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
@@ -35,7 +36,7 @@
   <package id="Microsoft.Owin.Security.OpenIdConnect" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="Ninject.Extensions.ContextPreservation" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Extensions.NamedScope" version="3.2.0.0" targetFramework="net45" />
