--- a/src/Website/Web.config
+++ b/src/Website/Web.config
@@ -20,17 +20,18 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="timezone" value="Pacific Standard Time" />
-    <!--
-    <add key="twilioAccountSid" value="TWILIO_ID" />
-    <add key="memberLinkTemplate" value="DATABASE_URL/members/detail/{0}" />
-    <add key="autoUpdateDatabase" value="true"/>
     <add key="auth:authority" value="https://localhost:44300" />
     <add key="auth:endsession" value="https://localhost:44300/connect/endsession"/>
     <add key="auth:redirect" value="https://localhost:44304" />
-    <add key="auth:clientId" value="CLIENT_ID_FOR_UI" />
-    <add key="api:client" value="CLIENT_ID_FOR_DATABASE_API"/>
-    <add key="api:clientSecret" value="CLIENT_SECRET"/>
-    <add key="api:root" value="DATABASE_API_ROOT" />
+    <add key="auth:clientId" value="missionline" />
+    <add key="twilioAccountSid" value="blah blah" />
+    <add key="memberLinkTemplate" value="https://google.com/?q={0}" />
+    <add key="api:client" value="missionline-server"/>
+    <add key="api:clientSecret" value="SECRET"/>
+    <add key="api:root" value="https://localhost:44302" />
+    <add key="AdminPassword" value="1111"/>
+    <!--
+    <add key="autoUpdateDatabase" value="true"/>
     -->
   </appSettings>
   <location path="Account">
