Copy web.release.config if needed for build

--- a/src/Website/Website.csproj
+++ b/src/Website/Website.csproj
@@ -563,6 +563,9 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
+  <PropertyGroup>
+    <PreBuildEvent>if not exist "$(ProjectDir)Web.Release.config" copy "$(ProjectDir)Web.Release.config.template" "$(ProjectDir)Web.Release.config"</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
