Use hybrid flow instead of implicit.

--- a/src/Website/Web.config
+++ b/src/Website/Web.config
@@ -20,15 +20,16 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="timezone" value="Pacific Standard Time" />
-    <add key="auth:authority" value="https://localhost:44300" />
+    <add key="auth:authority" value="https://localhost:44300/" />
     <add key="auth:endsession" value="https://localhost:44300/connect/endsession"/>
-    <add key="auth:redirect" value="https://localhost:44304" />
+    <add key="auth:redirect" value="https://localhost:44304/" />
     <add key="auth:clientId" value="missionline" />
+    <add key="auth:secret" value="get_your_own"/>
     <add key="twilioAccountSid" value="blah blah" />
     <add key="memberLinkTemplate" value="https://google.com/?q={0}" />
-    <add key="api:client" value="missionline-server"/>
-    <add key="api:clientSecret" value="SECRET"/>
-    <add key="api:root" value="https://localhost:44302" />
+    <add key="api:root" value="https://localhost:44302/" />
+    <add key="api:clientId" value="missionline-server"/>
+    <add key="api:secret" value="get_your_own" />
     <add key="AdminPassword" value="1111"/>
     <!--
     <add key="autoUpdateDatabase" value="true"/>
