Don't require HTTPS for dev environments - just check the "require HTTPS" box on production server.

--- a/src/Website/Web.config
+++ b/src/Website/Web.config
@@ -9,10 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\ProjectsV12;AttachDbFilename=|DataDirectory|\aspnet-Website-2.mdf;Initial Catalog=aspnet-Website-2;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--
-    <add name="DefaultConnection" connectionString="Server=tcp:gdo4e1dz1c.database.windows.net,1433;Database=mcosand-apps;User ID=stagingdb@gdo4e1dz1c;Password=hpRwIAMpSgWSPdNVPJ17;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
-    -->
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\ProjectsV12;AttachDbFilename=|DataDirectory|\aspnet-Website.mdf;Initial Catalog=aspnet-Website;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings file="web.local.config">
     <add key="webpages:Version" value="3.0.0.0" />
